
[build-system]
requires = [
    "setuptools>=40.6.0",
    "wheel",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
skip_glob = ["docs/*"]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.unladen]
verbose = true
base-url = "https://dfm.io/unladen"
repo = "https://github.com/dfm/unladen.git"
branch = "gh-pages"
version-rules = [
    {from = "^refs/heads/(.+)$", to = "{0}"},
    {from = "^refs/tags/v([0-9]+)\\.([0-9]+)\\..*$", to = "v{0}.{1}"}
]
alias-rules = [
    {from = "^refs/heads/main$", to = "latest"},
    {from = "^refs/tags/v[0-9\\.]+$", to = "stable"},
]
